feat: added api for create/delete a room, add/remove a player to a room
